# rift

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: Graph.tsx  Layout.tsx  Settings.tsx  SplitList.tsx  Timer.tsx  WelcomeScreen.tsx
src/hooks/: useHotkeys.ts  useSounds.ts  useTimer.ts
src/store/: settingsStore.ts
src/themes/: themes.ts
src/types/: index.ts
